实现文档后端部分

--- a/关系模式文档.md
+++ b/关系模式文档.md
@@ -124,3 +124,10 @@
 | rating     | int      | -            |
 | content    | text     | -            |
 
+### Link
+| 属性名     | 数据类型 | 备注         |
+| ---------- | -------- | ------------ |
+| link_id  | int      | 主码、主属性 |
+| student_id | int      | 外码         |
+| tutor_id   | int      | 外码         |
+
