--- a/设计文档/files/数据库概念模式设计.md
+++ b/设计文档/files/数据库概念模式设计.md
@@ -1,20 +1,20 @@
 ## 二、数据库概念模式设计
 
-### 1. 系统初步ER图
+### 2.1 系统初步ER图
 
-#### 1.1 实体ER图
+#### 2.1.1 实体ER图
 
 以下是包含主要实体属性的ER图
 
 ![实体ER图](..\picture\实体ER图.png#pic_center)
 
-#### 1.2 关系ER图
+#### 2.1.2 关系ER图
 
 以下是包含主要实体关系的ER图
 
 ![关系ER图](..\picture\关系ER图.png)
 
-### 2. 系统基本ER图
+### 2.2 系统基本ER图
 
 将实体ER图和关系ER图进行合并，消除冗余后，可以得到系统基本ER图
 
