完成需求描述和数据元素表

--- a/设计文档/files/需求分析.md
+++ b/设计文档/files/需求分析.md
@@ -1,5 +1,80 @@
 ## 一、需求分析
 
+### 1.1 需求描述
+
+#### 1.1.1 背景调研
+
+随着教育市场的不断发展，家教服务的需求日益增长。为了满足学生对高质量教育资源的需求，以及为家教提供更好的工作平台，我们团队开发了一个家教综合服务平台。该平台旨在整合学生和家教之间的资源，通过线上平台实现更高效、便捷的服务对接。以下是对当前教育市场现状的分析：
+
+* **教育需求多样化**：不同年龄段的学生有不同的学习需求，从基础学科辅导到特长培养，从考试准备到职业规划，家教服务需要覆盖广泛的学习领域。
+* **服务质量参差不齐**：市场上存在大量的家教机构和个人家教，但服务质量和服务标准差异较大，缺乏统一的评价体系。
+* **信息不对称**：学生难以获取全面准确的家教信息，而家教也面临找到合适学生的挑战。
+* **沟通成本高**：传统的家教对接方式往往依赖于电话、微信等即时通讯工具，效率低下且容易遗漏重要信息。
+
+因此，建立一个集成化、功能强大、数据安全的家教服务平台显得尤为重要。该平台不仅可以解决上述问题，还可以为用户提供更加个性化的服务体验，提升整体教育服务质量。
+
+#### 1.1.2 用户构成
+
+家教综合服务平台的用户为以下3类：
+
+* 学生
+* 家教
+* 管理员
+
+根据调研，总结初步需求如下：
+
+| 学生           | 家教           | 管理员   |
+| -------------- | -------------- | -------- |
+| 个人资料管理   | 个人资料管理   | 发布公告 |
+| 寻找家教       | 寻找学生       | 用户管理 |
+| 管理自己的家教 | 管理自己的学生 | 帖子审核 |
+| 获取学习资料   | 上传学习资料   |          |
+| 评价反馈       | 接收通知       |          |
+| 接收通知       | 浏览公告       |          |
+| 浏览公告       |                |          |
+
+#### 1.1.3 需求总结
+
+详细需求总结如下：
+
+对于**学生**：
+
+1、可以随时完善、修改自己的个人资料，包括性别、年龄、年级、邮箱、联系方式等。
+
+2、可以根据自己对薄弱科目、时间安排、报酬等方面的因素的考虑发布招聘贴招聘家教，也可以去广场查看求聘贴寻找符合条件的家教，可以选择通过或拒绝想和自己建立师生关系的家教的请求。
+
+3、对于已经建立师生关系的家教，学生可以选择与其解除师生关系。
+
+4、可以获取家教上传的学习资料。
+
+5、对于已经建立师生关系的家教，可以随时对其发表评价。
+
+6、可以接收通知，包括发布的帖子是否审核通过、收到家教上传的学习资料等。
+
+7、可以接收并浏览管理员发布的公告。
+
+对于**家教**：
+
+1、可以随时完善、修改自己的个人资料，包括性别、年龄、年级、邮箱、联系方式等。
+
+2、可以根据自己对擅长科目、时间安排、期望薪资等方面的因素的考虑发布求聘贴寻找学生，也可以去广场查看招聘贴寻找符合条件的学生，可以选择通过或拒绝想和自己建立师生关系的学生的请求。
+
+3、对于已经建立师生关系的学生，家教可以选择与其解除师生关系。
+
+4、可以给学生上传学习资料。
+
+5、可以接收通知，包括发布的帖子是否审核通过、收到学生的评价等。
+
+6、可以接收并浏览管理员发布的公告。
+
+对于**管理员**：
+
+1、可以向全体学生和家教发布公告。
+
+2、可以对用户进行管理，查看其个人主页或将其拉入黑名单。
+
+3、可以对未发布的帖子进行审核，只有审核通过的帖子才会发布到对应广场。
+
 ### 1.2 数据流图
 
 #### 1.2.1 总体数据流图
@@ -21,3 +96,116 @@
 #### 1.2.5 师生互动部分数据流图
 
 ![师生互动部分数据流图](..\picture\师生互动部分数据流图.png)
+
+### 1.3 数据元素表
+
+#### 1.3.1 用户管理部分
+
+**Student**
+
+| 字段名称 | 数据类型 | 说明         |
+| -------- | -------- | ------------ |
+| user_id  | int      | 学生编号     |
+| age      | int      | 学生年龄     |
+| gender   | int      | 学生性别     |
+| contact  | varchar  | 学生联系电话 |
+| email    | email    | 学生邮箱     |
+| grade    | int      | 学生年级     |
+
+**Tutor**
+
+| 字段名称 | 数据类型 | 说明         |
+| -------- | -------- | ------------ |
+| user_id  | int      | 家教编号     |
+| age      | int      | 家教年龄     |
+| gender   | int      | 家教性别     |
+| contact  | varchar  | 家教联系电话 |
+| email    | email    | 家教邮箱     |
+| rating   | int      | 家教评分     |
+
+#### 1.3.2 师生关系管理部分
+
+**Link**
+
+| 字段名称   | 数据类型 | 说明         |
+| ---------- | -------- | ------------ |
+| link_id    | int      | 师生关系编号 |
+| student_id | int      | 学生编号     |
+| tutor_id   | int      | 家教编号     |
+
+#### 1.3.3 帖子管理部分
+
+**Post**
+
+| 字段名称     | 数据类型 | 说明                 |
+| ------------ | -------- | -------------------- |
+| post_id      | int      | 帖子编号             |
+| user_id      | int      | 发帖人编号           |
+| title        | varchar  | 帖子标题             |
+| post_date    | date     | 发帖日期             |
+| start_date   | date     | 帖子起始日期         |
+| end_date     | date     | 帖子终止日期         |
+| content      | text     | 帖子内容             |
+| is_completed | boolean  | 帖子是否被保存       |
+| is_approved  | boolean  | 帖子是否被管理员通过 |
+
+**PostSubject**
+
+| 字段名称 | 数据类型 | 说明           |
+| -------- | -------- | -------------- |
+| post_id  | int      | 帖子编号       |
+| subject  | varchar  | 帖子包含的科目 |
+
+#### 1.3.4 其他事务部分
+
+**Notification**
+
+| 字段名称          | 数据类型 | 说明             |
+| ----------------- | -------- | ---------------- |
+| notification_id   | int      | 通知编号         |
+| user_id           | int      | 接收通知用户编号 |
+| notification_date | date     | 发送通知日期     |
+| title             | varchar  | 通知标题         |
+| description       | text     | 通知内容         |
+| is_read           | boolean  | 通知是否已读     |
+
+**StudyMaterial**‘
+
+| 字段名称      | 数据类型 | 说明             |
+| ------------- | -------- | ---------------- |
+| material_id   | int      | 学习材料编号     |
+| tutor_id      | int      | 家教编号         |
+| student_id    | int      | 学生编号         |
+| file_name     | varchar  | 文件名           |
+| download_link | varchar  | 下载链接         |
+| upload_ate    | date     | 学习材料上传日期 |
+
+**Review**
+
+| 字段名称   | 数据类型 | 说明     |
+| ---------- | -------- | -------- |
+| review_id  | int      | 评价编号 |
+| student_id | int      | 学生编号 |
+| tutor_id   | int      | 家教编号 |
+| rating     | int      | 评分     |
+| content    | text     | 评价内容 |
+| date       | date     | 评价日期 |
+
+**Todo**
+
+| 字段名称         | 数据类型 | 说明                 |
+| ---------------- | -------- | -------------------- |
+| todo_id          | int      | 待办编号             |
+| owner_id         | int      | 发起者编号           |
+| accepter_id      | int      | 接收者编号           |
+| accepter_post_id | int      | 接收者对应帖子的编号 |
+| is_completed     | int      | 待办是否完成         |
+
+**Announcement**
+
+| 字段名称          | 数据类型 | 说明         |
+| ----------------- | -------- | ------------ |
+| announcement_id   | int      | 公告编号     |
+| announcement_date | date     | 发布公告日期 |
+| title             | varchar  | 公告标题     |
+| description       | text     | 公告内容     |
