实现文档补充

--- a/设计文档/files/实现文档.md
+++ b/设计文档/files/实现文档.md
@@ -365,5 +365,364 @@ class Announcement(models.Model):
         ]
 ```
 
+### 3.7 存储过程
+### 3.7.1 用户管理（注册/登录）
+1. 用户注册
+
+* **涉及的基本表**：`User`，`Student`，`Tutor`
+
+* **过程描述**：检查用户是否被注册。如果未被注册，则将用户信息插入到User表中，再根据身份信息插入到Student或Tutor表中，并给用户发送一条注册成功的通知。值得注意的是，管理员账号只能由超级管理员手动添加，因此不会出现管理员注册的情况。
+```python
+@csrf_exempt
+def register(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        username = body.get('name')
+        password = body.get('password')
+        role = body.get('role')
+        try:
+            # 检查用户是否已经存在
+            user = User.objects.get(username=username)
+            result={'data':{}}
+            result['code'] = -1
+            return JsonResponse(result)
+        except User.DoesNotExist:
+            # 创建用户
+            user = User(username=username, 
+                        password=password, 
+                        identity=-1,
+                        registration_date=datetime.now(pytz.timezone('Asia/Shanghai')))
+            result={'data':{}}
+            if role == "admin":
+                raise Exception("管理员账号只能由超级管理员手动添加")
+            elif role == "teacher":
+                user.identity = 1
+                user.save()
+                tutor=Tutor(user_id=user)
+                tutor.save()
+                result['data']['roles']=[{'id': 'teacher'}]
+            elif role == "student":
+                user.identity = 2
+                user.save()
+                student=Student(user_id=user)
+                student.save()
+                result['data']['roles']=[{'id': 'student'}]
+            else:
+                raise Exception("未知身份")
+
+            request.session['user_id'] = user.user_id
+            sendNotice(user,"注册成功","欢迎加入家教综合服务平台！")
+
+            result['code'] = 0
+            result['data']['token']="Authorization:" + str(random.random())
+            result['data']['id'] = str(user.user_id)
+            return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+2. 用户登录
+* **涉及的基本表**：`User`
+
+* **过程描述**：检查用户是否存在，如果存在则返回用户的身份信息，否则返回错误信息。值得注意的是，后续有相关业务需要知道当前用户的身份，因此在登录成功后将用户的user_id存入session中。
+```python
+@csrf_exempt
+def login(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        username = body.get('name') 
+        password = body.get('password')
+        result = {'data': {}}
+        try:
+            # 查询数据库中是否存在对应的用户
+            user = User.objects.get(username=username, password=password)
+            if user.identity == 0:
+                result['data']['roles'] = [{'id': 'admin'}]
+            elif user.identity == 1:
+                result['data']['roles'] = [{'id': 'teacher'}]
+            elif user.identity == 2:
+                result['data']['roles'] = [{'id': 'student'}]
+            else:
+                raise Exception("未知身份")
+            result['data']['id'] = str(user.user_id)
+
+            request.session['user_id'] = user.user_id 
+
+            # 登录成功
+            result['code'] = 0
+            result['data']['token'] = "Authorization:" + str(random.random())
+            result['message'] = "登录成功"
+        except User.DoesNotExist:
+            # 用户不存在或密码错误
+            result['code'] = -1
+            result['message'] = "账户名或密码错误"
+        return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+### 3.7.2 帖子管理
+1. 发帖
+
+* **涉及的基本表**：`Post`，`PostSubject`
+
+* **过程描述**：检查帖子的内容是否完整，如果不完整则返回错误信息。如果内容完整，则将帖子信息插入到Post表中，再将帖子的科目信息插入到PostSubject表中。
+```python
+@csrf_exempt
+def sendPost(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        request_id=int(body.get('id'))
+        title = body.get('data').get('title')
+        startDate = body.get('data').get('startDate')
+        endDate = body.get('data').get('endDate')
+        subjects=body.get('data').get('subjects')
+        location=body.get('data').get('location')
+        fullLocation=body.get('data').get('fullLocation')
+        telephoneNumber=body.get('data').get('telephoneNumber')
+        email=body.get('data').get('emailAddress')
+        content=body.get('data').get('content')
+        is_complete = all([title, startDate, endDate, subjects, location, fullLocation, telephoneNumber, content])
+        if not is_complete:
+            return JsonResponse({'code': 0})
+        
+        try :
+            user=User.objects.get(user_id=request_id)
+        except User.DoesNotExist:
+            return JsonResponse({'code': -1, 'message': '用户不存在'})
+        
+        if user.identity ==0:
+            raise Exception("管理员不通过sendPost发帖")
+        else:
+            post=Post(
+                user_id=user,
+                title=title,
+                postDate=datetime.now(pytz.timezone('Asia/Shanghai')),
+                startDate=startDate,
+                endDate=endDate,
+                location=location,
+                fullLocation=fullLocation,
+                telephoneNumber=telephoneNumber,
+                emailAddress=email,
+                content=content,
+                is_completed=True,
+                is_approved=False,
+            )
+            post.save()
+
+            postSubjects = [
+                PostSubject(post_id=post, subject=subject)
+                for subject in subjects
+            ]
+            PostSubject.objects.bulk_create(postSubjects)
+
+            result={'data':{}}
+            result['code'] = 0
+            return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+2. 保存模板
+
+* **涉及的基本表**：`Post`，`PostSubject`
+
+* **过程描述**：将帖子内容保存为模板，如果用户已经有模板，则更新模板内容，否则新建一个模板。模板与帖子用is_completed字段区分。
+```python
+@csrf_exempt
+def savePost(request):
+    if request.method == 'POST':
+        body = json.loads(request.body)
+        request_id=int(body.get('id'))
+        title = body.get('data').get('title')
+        startDate = body.get('data').get('startDate') or None
+        endDate = body.get('data').get('endDate') or None
+        subjects=body.get('data').get('subjects')
+        location=body.get('data').get('location')
+        fullLocation=body.get('data').get('fullLocation')
+        telephoneNumber=body.get('data').get('telephoneNumber')
+        email=body.get('data').get('emailAddress') or None
+        content=body.get('data').get('content')
+
+        try:
+            user=User.objects.get(user_id=request_id)
+        except User.DoesNotExist:
+            return JsonResponse({'code': -1, 'message': '用户不存在'})
+        
+        if user.identity ==0:
+            raise Exception("管理员无法保存帖子")
+        else:
+            try:
+                post=Post.objects.get(user_id=user,is_completed=False)
+                post.title=title
+                post.startDate=startDate
+                post.endDate=endDate
+                post.location=location
+                post.fullLocation=fullLocation
+                post.telephoneNumber=telephoneNumber
+                post.emailAddress=email
+                post.content=content
+                post.save()
+                PostSubject.objects.filter(post_id=post).delete()
+                postSubjects = [
+                    PostSubject(post_id=post, subject=subject)
+                    for subject in subjects
+                ]
+                PostSubject.objects.bulk_create(postSubjects)
+                result={'data':{}}
+                result['code'] = 0
+                return JsonResponse(result)
+            except Post.DoesNotExist:
+                post=Post(
+                    user_id=user,
+                    title=title,
+                    startDate=startDate,
+                    endDate=endDate,
+                    location=location,
+                    fullLocation=fullLocation,
+                    telephoneNumber=telephoneNumber,
+                    emailAddress=email,
+                    content=content,
+                    is_completed=False,
+                    is_approved=False,
+                )
+                post.save()
+                postSubjects = [
+                    PostSubject(post_id=post, subject=subject)
+                    for subject in subjects
+                ]
+                PostSubject.objects.bulk_create(postSubjects)
+                result={'data':{}}
+                result['code'] = 0
+                return JsonResponse(result)
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
+```
+
+3. 获取模板
+
+* **涉及的基本表**：`Post`，`PostSubject`
+
+* **过程描述**：获取用户的模板，如果用户没有模板，则返回空数据。  
+```python
+@csrf_exempt
+def getSavedPost(request):
+    if request.method == 'GET':
+        try:
+            user_id=request.GET.get('id')
+            user=User.objects.get(user_id=int(user_id))
+            if user.identity==0:
+                raise Exception("管理员无法获取帖子")
+            else:
+                try:
+                    post=Post.objects.get(user_id=user,is_completed=False)
+                    result={'data':{}}
+                    result['code'] = 0
+                    result['data']['title']=post.title
+                    result['data']['startDate']=post.startDate
+                    result['data']['endDate']=post.endDate
+                    location=post.location.strip('"')
+                    location=json.loads(location.replace("'",'"'))
+                    result['data']['location']=location
+                    result['data']['fullLocation']=post.fullLocation
+                    result['data']['telephoneNumber']=post.telephoneNumber
+                    result['data']['emailAddress']=post.emailAddress
+                    result['data']['content']=post.content
+                    subjects=PostSubject.objects.filter(post_id=post)
+                    result['data']['subjects']=[subject.subject for subject in subjects]
+                except:
+                    result={'data':{}}
+                    result['code'] = 0
+                return JsonResponse(result)
+        except User.DoesNotExist:
+            result={'data':{}}
+            result['code'] = 0
+            return JsonResponse(result)     
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
+4. 在帖子广场上获取帖子
+
+* **涉及的基本表**：`Post`，`PostSubject`
+
+* **过程描述**：获取帖子广场上的帖子，并根据搜索关键词以及用户身份进行筛选。具体来说，首先学生只会看到家教发的帖子，家教会看到学生发的帖子，管理员会看到所有尚未审核的帖子。然后根据搜索关键词进行筛选，匹配字段包含科目、用户名、标题、内容。如果搜索关键词为空，则返回所有符合条件的帖子。
+```python
+@csrf_exempt
+def getPosts(request):
+    if request.method == 'GET':
+        request_id = int(request.GET.get('id'))
+        request_page = int(request.GET.get('page'))
+        request_query = request.GET.get('query')
+        start = (request_page - 1) * 10
+        end = request_page * 10
+        returnSubjects = []
+        
+        try:
+            user = User.objects.get(user_id=request_id)
+            filter_id = 2 if user.identity == 1 else 1
+            
+            if request_query == "":
+                if user.identity != 0:
+                    posts = Post.objects.filter(is_completed=True, user_id__identity=filter_id, is_approved=True)
+                else:
+                    posts = Post.objects.filter(is_completed=True, is_approved=False)
+            else:
+                subjectsFits = PostSubject.objects.filter(subject=request_query).values_list('post_id', flat=True)
+                userFits = User.objects.filter(username=request_query).values_list('id', flat=True)
+                OtherFits = Post.objects.filter(
+                    models.Q(title__icontains=request_query) |
+                    models.Q(content__icontains=request_query)
+                ).values_list('id', flat=True)
+                
+                all_posts = Post.objects.all()
+                
+                allFits = set(subjectsFits) | set(userFits) | set(OtherFits)
+                if user.identity != 0:
+                    posts = Post.objects.filter(id__in=allFits, is_completed=True, user_id__identity=filter_id, is_approved=True)
+                else:
+                    posts = Post.objects.filter(id__in=allFits, is_completed=True, is_approved=False)
+            
+            post_ids = posts.values_list('id', flat=True)
+            post_subjects = PostSubject.objects.filter(post_id__in=post_ids).values('post_id', 'subject')
+            post_subject_map = {}
+            for ps in post_subjects:
+                post_subject_map.setdefault(ps['post_id'], []).append(ps['subject'])
+            
+            return_posts = []
+            now = datetime.now(pytz.timezone('Asia/Shanghai'))
+            for post in posts:
+                post_date = post.postDate.astimezone(pytz.timezone('Asia/Shanghai'))
+                time_diff = now - post_date
+                if time_diff < timedelta(hours=24):
+                    date_display = f"{time_diff.seconds // 3600}小时前"
+                elif time_diff < timedelta(days=3):
+                    date_display = f"{time_diff.days}天前"
+                else:
+                    date_display = post_date.strftime("%Y-%m-%d")
+                
+                location = post.location.strip('"')
+                location = json.loads(location.replace("'", '"'))
+                location = location[0] if isinstance(location, list) and location else location
+                
+                return_posts.append({
+                    'id': str(post.post_id),
+                    'title': post.title,
+                    'tags': post_subject_map.get(post.id, []),
+                    'content': post.content,
+                    'author': post.user_id.username,
+                    'authorId': post.user_id.user_id,
+                    'date': date_display,
+                    'location': location,
+                })
+            
+            result = {'posts': return_posts[start:end], 'total': len(posts)}
+            return JsonResponse(result)
+        except User.DoesNotExist:
+            return JsonResponse({'code': -1, 'message': '用户不存在'})
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
+```
+
 
 
