填写实现文档+年龄为空时显示空

--- a/设计文档/files/实现文档_第四部分.md
+++ b/设计文档/files/实现文档_第四部分.md
@@ -2,3 +2,49 @@
 
 ### 4.1 登录注册
 
+#### 4.1.1 登录
+
+![](..\picture\登录界面_1.png#pic_center)
+
+进入网站，或者在未登录的情况下访问网站页面都将跳转到首页，在这个页面用户可以进行登录，输入正确的用户名以及密码即可登录成功。
+
+#### 4.1.2 注册
+
+![](..\picture\登录界面_2.png)
+
+用户可以在首页的标签页进行注册。填写用户名、密码，以及确认密码、身份之后即可成功注册。本系统的管理员账号由后端分配，不可直接注册。
+
+#### 4.1.3 退出登录
+
+![](..\picture\退出登录.png)
+
+在登录成功后的主页面中，点击右上角的用户名可以展开下属的选择框可以选择退出登录。随后便会删除当前用户的登录认证信息并跳转到登录页面。
+
+#### 4.1.4 修改密码
+
+![](..\picture\修改密码.png)
+
+在相同的选择框中可以选择修改密码，之后便会弹出修改密码对话框。
+
+![](..\picture\修改密码_2.png)
+
+在经过前端验证“新密码”和“确认密码”一致、后端验证旧密码一致后即可修改密码。之后页面将会删除当前用户的登录认证信息并跳转到登录界面。
+
+### 4.2 个人主页
+
+![](..\picture\选择个人主页.png)
+
+在登录成功后的主页面中，点击右上角的用户名可以展开下属的选择框可以选择个人主页以查看个人主页。对于学生和家教两种不同的身份，个人主页的展示内容有所不同，主要区别在于是否有评论展示区以及评分展示区。
+
+#### 4.2.1 学生个人主页
+
+![](D:\code\code\数据库\BUAAdatabase\设计文档\picture\学生个人主页.png)
+
+#### 4.2.2 家教个人主页
+
+### 4.3 公告页面
+
+![](..\picture\公告页.png)
+
+在登录成功或者注册成功后用户会跳转到公告页面，在欢迎信息之下便是公告展示框，用户可以对公告标题进行点击以选择需要展示的公告内容。
+
