完善实现文档

--- a/设计文档/files/实现文档_第四部分.md
+++ b/设计文档/files/实现文档_第四部分.md
@@ -18,31 +18,55 @@
 
 ![](..\picture\退出登录.png)
 
-在登录成功后的主页面中，点击右上角的用户名可以展开下属的选择框可以选择退出登录。随后便会删除当前用户的登录认证信息并跳转到登录页面。
+在登录成功后的主页面中，点击右上角的用户名可以展开下属的选择框可以选择退出登录。随后页面便会删除当前用户的登录认证信息。用户将会跳转到登录页面。
 
 #### 4.1.4 修改密码
 
 ![](..\picture\修改密码.png)
 
-在相同的选择框中可以选择修改密码，之后便会弹出修改密码对话框。
+在相同的选择框中可以选择**修改密码**，之后便会弹出修改密码对话框。
 
 ![](..\picture\修改密码_2.png)
 
-在经过前端验证“新密码”和“确认密码”一致、后端验证旧密码一致后即可修改密码。之后页面将会删除当前用户的登录认证信息并跳转到登录界面。
+在经过前端验证“新密码”和“确认密码”一致、后端验证旧密码一致后即可修改密码。之后页面将会删除当前用户的登录认证信息。用户将会跳转到登录界面。
 
 ### 4.2 个人主页
 
 ![](..\picture\选择个人主页.png)
 
-在登录成功后的主页面中，点击右上角的用户名可以展开下属的选择框可以选择个人主页以查看个人主页。对于学生和家教两种不同的身份，个人主页的展示内容有所不同，主要区别在于是否有评论展示区以及评分展示区。
+在登录成功后的主页面中，点击右上角的用户名可以展开下属的选择框可以选择**个人主页**以查看个人主页。对于学生和家教两种不同的身份，个人主页的展示内容有所不同，主要区别在于是否有评论展示区以及评分展示区。
 
 #### 4.2.1 学生个人主页
 
-![](D:\code\code\数据库\BUAAdatabase\设计文档\picture\学生个人主页.png)
+![](..\picture\学生个人主页.png)
+
+学生个人主页按照从上到下，从左到右的顺序展示姓名、个性签名、性别、年龄、年级、邮箱、电话、地址、以及个人简介。
 
 #### 4.2.2 家教个人主页
 
-### 4.3 公告页面
+![](..\picture\教师个人主页.png)
+
+家教个人主页按照从上到下，从左到右的顺序展示姓名、个性签名、评分、评分人数、性别、年龄、学历、邮箱、电话、地址、个人简介以及用户评论。
+
+#### 4.2.3 编辑个人主页
+
+![](..\picture\选择编辑个人主页.png)
+
+在用户名下属的选择框中选择**编辑个人主页**可以对个人主页信息进行编辑。
+
+![](..\picture\编辑个人主页_家教.png)
+
+![](..\picture\编辑个人主页_学生.png)
+
+学生和家教的”编辑个人主页“页面大致相同。唯一的区别在于家教页面的”学历“一栏，在学生页面中显示为”年级“。
+
+### 4.3 消息通知
+
+![](..\picture\通知.png)
+
+点击顶栏的”闹钟“图标即可展开通知。当发生”帖子通过审核“”有新的公告“”家教发布学习资料“”请求建立师生关系“”成功建立师生关系“等多种情况时都会产生通知信息，以便用户及时获取重要信息。
+
+### 4.4 公告页面
 
 ![](..\picture\公告页.png)
 
