完善实现文档第四部分

--- a/设计文档/files/实现文档_第四部分.md
+++ b/设计文档/files/实现文档_第四部分.md
@@ -66,9 +66,42 @@
 
 点击顶栏的”闹钟“图标即可展开通知。当发生”帖子通过审核“”有新的公告“”家教发布学习资料“”请求建立师生关系“”成功建立师生关系“等多种情况时都会产生通知信息，以便用户及时获取重要信息。
 
-### 4.4 公告页面
+### 4.4 侧边栏
+
+![](..\picture\侧边栏.png)
+
+在每个页面的左侧都存在侧边栏，用户可以在侧边栏中选择页面进行跳转。对于不同的身份（学生，家教，管理员），侧边栏包含的页面不同。公有的页面为“公告”与“广场”。学生独有的页面为“我要招聘”和“我的学习”。家教独有的页面为“我要求聘”和“我的工作”。管理员页面独有的页面为“用户管理”与“发布公告”。
+
+### 4.5 公告
 
 ![](..\picture\公告页.png)
 
-在登录成功或者注册成功后用户会跳转到公告页面，在欢迎信息之下便是公告展示框，用户可以对公告标题进行点击以选择需要展示的公告内容。
+在登录成功或者注册成功后用户会跳转到**公告页面**，在欢迎信息之下便是公告展示框，用户可以对公告标题进行点击以选择需要查看的公告内容。
 
+### 4.6 广场
+
+#### 4.6.1 帖子检索
+
+![](..\picture\广场.png)
+
+用户可以在侧边栏中选择跳转到**广场页面**。在广场页面，不同的角色所看到的帖子不同。学生可以看到家教们发的求聘帖；家教可以看到学生们发的招聘帖；管理员可以看到所有帖子。
+
+![](..\picture\翻页.png)
+
+网页每次至多加载10篇帖子。用户需要点击页面下方的页码去查看更多的帖子。这样的设计可以使用户界面更加简介，同时减少网页负担。
+
+![](..\picture\帖子点击示例.png)
+
+对于每个帖子，点击作者名（蓝字部分）即可查看作者的个人主页，点击除此之外的任意部分即可查看帖子详情。
+
+![](..\picture\搜索.png)
+
+广场页面的最上方存在搜索框，提供搜索功能，并支持基本的模糊搜索（搜索“北”字，可以检索出所有内容包含“北”字的帖子）
+
+#### 4.6.2 帖子详情
+
+![](..\picture\帖子详情.png)
+
+![](..\picture\帖子详情_2.png)
+
+在广场页面点击帖子即可跳转到**帖子详情**页面，在该页面家教（学生）可以选择接受招聘（求聘），管理员可以选择“通过”或者“驳回”该帖子。只有管理员审核通过的帖子才会进入广场页面。
