完善设计文档

--- a/设计文档/files/实现文档_第四部分.md
+++ b/设计文档/files/实现文档_第四部分.md
@@ -105,3 +105,43 @@
 ![](..\picture\帖子详情_2.png)
 
 在广场页面点击帖子即可跳转到**帖子详情**页面，在该页面家教（学生）可以选择接受招聘（求聘），管理员可以选择“通过”或者“驳回”该帖子。只有管理员审核通过的帖子才会进入广场页面。
+
+### 4.7 学生学习界面
+
+![](..\picture\我的学习标签页.png)
+
+学生用户可以通过点击左边侧边栏“**我的学习**”进入学生学习界面。在该界面用户可以通过切换标签页进入“我的帖子”“我的家教”“我的待办”“我的学习资料”四个小标签页。
+
+#### 4.7.1 我的帖子
+
+![](..\picture\我的帖子.png)
+
+![](..\picture\我的帖子_2.png)
+
+在“我的帖子”小标签页中，用户可以浏览自己发布过的帖子，选择查看帖子详情或者删除帖子。
+
+#### 4.7.2 我的家教
+
+![](..\picture\我的家教.png)
+
+![](..\picture\我的家教_2.png)
+
+在“我的家教”小标签页中，学生用户可以查看自己的家教，浏览家教主页，对家教发表评价或者解除师生关系。
+
+![](..\picture\发表评价.png)
+
+在用户点击“发表评价”后，页面右侧将会弹出抽屉以供用户填写评价具体信息。用户提交的评价将会出现在对应家教的个人主页上。
+
+#### 4.7.3 我的待办
+
+![](..\picture\我的待办.png)
+
+在"**我的待办**"小标签页中，用户可以浏览自己的待办事项，并选择接受或者拒绝。
+
+![](..\picture\我的待办_2.png)
+
+待办事项中的蓝色部分为可跳转链接。以上图为例，当用户点击红框后，页面将分别跳转到对应的帖子详情页面和
+
+对应的家教主页。
+
+![](..\picture\我的学习资料.png)
