完成实现文档”系统实现效果“部分

--- a/设计文档/files/实现文档_第四部分.md
+++ b/设计文档/files/实现文档_第四部分.md
@@ -74,9 +74,17 @@
 
 ### 4.5 公告
 
+#### 4.5.1 查看公告
+
 ![](..\picture\公告页.png)
 
 在登录成功或者注册成功后用户会跳转到**公告页面**，在欢迎信息之下便是公告展示框，用户可以对公告标题进行点击以选择需要查看的公告内容。
+
+#### 4.5.2 发布公告
+
+![](..\picture\发布公告.png)
+
+在用户以管理员身份登入后，可以在侧边栏选择”**发布公告**“跳转到发布公告界面。在该界面管理员可以填写公告的内容并进行发布。
 
 ### 4.6 广场
 
@@ -104,15 +112,21 @@
 
 ![](..\picture\帖子详情_2.png)
 
-在广场页面点击帖子即可跳转到**帖子详情**页面，在该页面家教（学生）可以选择接受招聘（求聘），管理员可以选择“通过”或者“驳回”该帖子。只有管理员审核通过的帖子才会进入广场页面。
+在广场页面点击帖子即可跳转到**帖子详情**页面，在该页面家教（学生）可以选择接受“**招聘**“（”**求聘**“），管理员可以选择“**通过**”或者“**驳回**”该帖子。只有管理员审核通过的帖子才会进入广场页面。
 
-### 4.7 学生学习界面
+### 4.7 发帖界面
+
+![](..\picture\发帖界面.png)
+
+学生（家教）用户可以通过在侧边栏选择“**我要招聘（我要求聘）**”跳转到发帖界面。在这个页面用户可以填写自己的基本信息以及需求，并可以对已填写内容进行保存和提交。提交后的帖子经管理员审核通过后便会出现在广场界面。
+
+### 4.8 学生学习界面
 
 ![](..\picture\我的学习标签页.png)
 
 学生用户可以通过点击左边侧边栏“**我的学习**”进入学生学习界面。在该界面用户可以通过切换标签页进入“我的帖子”“我的家教”“我的待办”“我的学习资料”四个小标签页。
 
-#### 4.7.1 我的帖子
+#### 4.8.1 我的帖子
 
 ![](..\picture\我的帖子.png)
 
@@ -120,7 +134,7 @@
 
 在“我的帖子”小标签页中，用户可以浏览自己发布过的帖子，选择查看帖子详情或者删除帖子。
 
-#### 4.7.2 我的家教
+#### 4.8.2 我的家教
 
 ![](..\picture\我的家教.png)
 
@@ -132,11 +146,11 @@
 
 在用户点击“发表评价”后，页面右侧将会弹出抽屉以供用户填写评价具体信息。用户提交的评价将会出现在对应家教的个人主页上。
 
-#### 4.7.3 我的待办
+#### 4.8.3 我的待办
 
 ![](..\picture\我的待办.png)
 
-在"**我的待办**"小标签页中，用户可以浏览自己的待办事项，并选择接受或者拒绝。
+在"我的待办"小标签页中，用户可以浏览自己的待办事项，并选择接受或者拒绝。
 
 ![](..\picture\我的待办_2.png)
 
@@ -144,4 +158,26 @@
 
 对应的家教主页。
 
+#### 4.8.4 我的学习资料
+
 ![](..\picture\我的学习资料.png)
+
+在"我的学习资料"小标签页中，学生用户可以查看家教发布的学习资料，并选择进行下载。
+
+### 4.9 家教工作界面
+
+![](..\picture\我的工作.png)
+
+家教的“**我的工作**”界面与学生的“**我的学习**”界面界面大致相同，区别在于家教在”我的学生“标签页下存在”发布学习资料“按钮。
+
+![](..\picture\发布学习资料.png)
+
+在该界面家教可以填写需要发布的学习资料的文件名以及下载链接，以供学生进行下载。
+
+### 4.10 用户管理
+
+![](..\picture\用户管理.png)
+
+![](..\picture\用户管理_2.png)
+
+在用户以管理员身份登入后，用户可以点击侧边栏的”**用户管理**“按钮进入”用户管理“界面。在该界面，管理员可以查看所有用户的信息并删除用户（将用户加入黑名单）。
