实现文档补充

--- a/设计文档/files/实现文档.md
+++ b/设计文档/files/实现文档.md
@@ -646,52 +646,56 @@ def getSavedPost(request):
 
 * **涉及的基本表**：`Post`，`PostSubject`
 
-* **过程描述**：获取帖子广场上的帖子，并根据搜索关键词以及用户身份进行筛选。具体来说，首先学生只会看到家教发的帖子，家教会看到学生发的帖子，管理员会看到所有尚未审核的帖子。然后根据搜索关键词进行筛选，匹配字段包含科目、用户名、标题、内容。如果搜索关键词为空，则返回所有符合条件的帖子。
+* **过程描述**：获取帖子广场上的帖子，并根据搜索关键词以及用户身份进行筛选。具体来说，首先学生只会看到家教发的帖子，家教会看到学生发的帖子，管理员会看到所有尚未审核的帖子。然后根据搜索关键词进行筛选，匹配字段包含科目、用户名、标题、内容、地址。如果搜索关键词为空，则返回所有符合条件的帖子。采用模糊匹配。
 ```python
 @csrf_exempt
 def getPosts(request):
     if request.method == 'GET':
-        request_id = int(request.GET.get('id'))
-        request_page = int(request.GET.get('page'))
-        request_query = request.GET.get('query')
-        start = (request_page - 1) * 10
-        end = request_page * 10
-        returnSubjects = []
-        
+        request_id=int(request.GET.get('id'))
+        request_page=int(request.GET.get('page'))
+        request_query=request.GET.get('query')
+        start=(request_page-1)*10
+        end=request_page*10
+        returnSubjects=[]
+        user=User.objects.get(user_id=request_id)
         try:
-            user = User.objects.get(user_id=request_id)
-            filter_id = 2 if user.identity == 1 else 1
-            
-            if request_query == "":
-                if user.identity != 0:
-                    posts = Post.objects.filter(is_completed=True, user_id__identity=filter_id, is_approved=True)
-                else:
-                    posts = Post.objects.filter(is_completed=True, is_approved=False)
+            if user.identity==1:
+                filter_id=2
             else:
-                subjectsFits = PostSubject.objects.filter(subject=request_query).values_list('post_id', flat=True)
-                userFits = User.objects.filter(username=request_query).values_list('id', flat=True)
-                OtherFits = Post.objects.filter(
-                    models.Q(title__icontains=request_query) |
-                    models.Q(content__icontains=request_query)
-                ).values_list('id', flat=True)
-                
-                all_posts = Post.objects.all()
-                
-                allFits = set(subjectsFits) | set(userFits) | set(OtherFits)
-                if user.identity != 0:
-                    posts = Post.objects.filter(id__in=allFits, is_completed=True, user_id__identity=filter_id, is_approved=True)
+                filter_id=1
+            
+            if request_query=="":
+                if user.identity!=0:
+                    posts=Post.objects.filter(is_completed=True,user_id__identity=filter_id,is_approved=True)
                 else:
-                    posts = Post.objects.filter(id__in=allFits, is_completed=True, is_approved=False)
+                    posts=Post.objects.filter(is_completed=True,is_approved=False)
+            else:
+                all_posts = Post.objects.all()
+                matching_posts = []
+                for post in all_posts:
+                    subjects=PostSubject.objects.filter(post_id=post).values_list('subject', flat=True)
+                    subjects_str = ' '.join(subjects)
+                    username_str = post.user_id.username
+                    title_str = post.title
+                    content_str = post.content
+                    location_str = post.location.strip('"')
+                    location_list = json.loads(location_str.replace("'", '"'))
+                    location_str = ' '.join(location_list) if isinstance(location_list, list) else location_str
+                    long_str = f"{subjects_str} {username_str} {title_str} {content_str} {location_str}".lower()
+                    
+                    request_query = request_query.lower()
+                    if request_query in long_str:
+                        matching_posts.append(post)
+                if user.identity != 0:
+                    print(post.user_id.identity)
+                    posts = [post for post in matching_posts if post.is_completed and post.user_id.identity == filter_id and post.is_approved]
+                else:
+                    posts = [post for post in matching_posts if post.is_completed and not post.is_approved]
             
-            post_ids = posts.values_list('id', flat=True)
-            post_subjects = PostSubject.objects.filter(post_id__in=post_ids).values('post_id', 'subject')
-            post_subject_map = {}
-            for ps in post_subjects:
-                post_subject_map.setdefault(ps['post_id'], []).append(ps['subject'])
-            
-            return_posts = []
-            now = datetime.now(pytz.timezone('Asia/Shanghai'))
+            return_posts=[]
             for post in posts:
+                user=post.user_id
+                now = datetime.now(pytz.timezone('Asia/Shanghai'))
                 post_date = post.postDate.astimezone(pytz.timezone('Asia/Shanghai'))
                 time_diff = now - post_date
                 if time_diff < timedelta(hours=24):
@@ -700,29 +704,138 @@ def getPosts(request):
                     date_display = f"{time_diff.days}天前"
                 else:
                     date_display = post_date.strftime("%Y-%m-%d")
-                
-                location = post.location.strip('"')
-                location = json.loads(location.replace("'", '"'))
-                location = location[0] if isinstance(location, list) and location else location
-                
+                return_subject_lines=PostSubject.objects.filter(post_id=post)
+                returnSubjects=[]
+                for subject in return_subject_lines:
+                    returnSubjects.append(subject.subject)
+                location=post.location.strip('"')
+                location=json.loads(location.replace("'",'"'))
+                location=location[0]
                 return_posts.append({
-                    'id': str(post.post_id),
-                    'title': post.title,
-                    'tags': post_subject_map.get(post.id, []),
-                    'content': post.content,
-                    'author': post.user_id.username,
-                    'authorId': post.user_id.user_id,
-                    'date': date_display,
-                    'location': location,
+                    'id':str(post.post_id),
+                    'title':post.title,
+                    'tags':returnSubjects,
+                    'content':post.content,
+                    'author':user.username,
+                    'authorId':user.user_id,
+                    'date':date_display,
+                    'location':location,
                 })
-            
-            result = {'posts': return_posts[start:end], 'total': len(posts)}
+            result={'posts':return_posts[start:end],'total':len(posts)}
             return JsonResponse(result)
         except User.DoesNotExist:
-            return JsonResponse({'code': -1, 'message': '用户不存在'})
+            raise Exception("用户不存在")
+    else:
+        return JsonResponse({'code': -1, 'message': '仅支持GET请求'})@csrf_exempt
+def getPosts(request):
+    if request.method == 'GET':
+        request_id=int(request.GET.get('id'))
+        request_page=int(request.GET.get('page'))
+        request_query=request.GET.get('query')
+        start=(request_page-1)*10
+        end=request_page*10
+        returnSubjects=[]
+        user=User.objects.get(user_id=request_id)
+        try:
+            if user.identity==1:
+                filter_id=2
+            else:
+                filter_id=1
+            
+            if request_query=="":
+                if user.identity!=0:
+                    posts=Post.objects.filter(is_completed=True,user_id__identity=filter_id,is_approved=True)
+                else:
+                    posts=Post.objects.filter(is_completed=True,is_approved=False)
+            else:
+                all_posts = Post.objects.all()
+                matching_posts = []
+                for post in all_posts:
+                    subjects=PostSubject.objects.filter(post_id=post).values_list('subject', flat=True)
+                    subjects_str = ' '.join(subjects)
+                    username_str = post.user_id.username
+                    title_str = post.title
+                    content_str = post.content
+                    location_str = post.location.strip('"')
+                    location_list = json.loads(location_str.replace("'", '"'))
+                    location_str = ' '.join(location_list) if isinstance(location_list, list) else location_str
+                    long_str = f"{subjects_str} {username_str} {title_str} {content_str} {location_str}".lower()
+                    
+                    request_query = request_query.lower()
+                    if request_query in long_str:
+                        matching_posts.append(post)
+                if user.identity != 0:
+                    posts = [post for post in matching_posts if post.is_completed and post.user_id.identity == filter_id and post.is_approved]
+                else:
+                    posts = [post for post in matching_posts if post.is_completed and not post.is_approved]
+            
+            return_posts=[]
+            for post in posts:
+                user=post.user_id
+                now = datetime.now(pytz.timezone('Asia/Shanghai'))
+                post_date = post.postDate.astimezone(pytz.timezone('Asia/Shanghai'))
+                time_diff = now - post_date
+                if time_diff < timedelta(hours=24):
+                    date_display = f"{time_diff.seconds // 3600}小时前"
+                elif time_diff < timedelta(days=3):
+                    date_display = f"{time_diff.days}天前"
+                else:
+                    date_display = post_date.strftime("%Y-%m-%d")
+                return_subject_lines=PostSubject.objects.filter(post_id=post)
+                returnSubjects=[]
+                returnSubjects = [subject.subject for subject in return_subject_lines]
+                location=post.location.strip('"')
+                location=json.loads(location.replace("'",'"'))
+                location=location[0]
+                return_posts.append({
+                    'id':str(post.post_id),
+                    'title':post.title,
+                    'tags':returnSubjects,
+                    'content':post.content,
+                    'author':user.username,
+                    'authorId':user.user_id,
+                    'date':date_display,
+                    'location':location,
+                })
+            result={'posts':return_posts[start:end],'total':len(posts)}
+            return JsonResponse(result)
+        except User.DoesNotExist:
+            raise Exception("用户不存在")
     else:
         return JsonResponse({'code': -1, 'message': '仅支持GET请求'})
 ```
 
 
+5. 获取用户所发的帖子
+* **涉及的基本表**：`Post`，`PostSubject`
+* **过程描述**：根据帖子id直接获取帖子内容，如果帖子不存在则返回错误信息。
+```python
+@csrf_exempt
+def getPost(request):
+    if request.method == 'GET':
+        post_id=int(request.GET.get('id'))
+        try:
+            post=Post.objects.get(post_id=post_id)
+            result={'data':{}}
+            result['code'] = 0
+            result['data']['title']=post.title
+            result['data']['author']=post.user_id.username
+            location=post.location.strip('"')
+            location=json.loads(location.replace("'",'"'))
+            result['data']['location']=location
+            result['data']['fullLocation']=post.fullLocation
+            result['data']['telephoneNumber']=post.telephoneNumber
+            result['data']['emailAddress']=post.emailAddress
+            result['data']['startDate']=post.startDate
+            result['data']['endDate']=post.endDate
+            subject_lines=PostSubject.objects.filter(post_id=post)
+            subjects=[]
+            subjects = [subject.subject for subject in subject_lines]
+            result['data']['subjects']=subjects
+            result['data']['content']=post.content
+            return JsonResponse(result)
+            
+        except Post.DoesNotExist:
+            return JsonResponse({'code': -1, 'message': '帖子不存在'})
+```
 
